--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>My personal</title>
 </head>
 
-<body>
+<body style="background-color: #b9fffc;">
   <table cellspacing=20>
     <tr>
       <td> <img src="resources/gulshan.png" alt="Gulshan Profile picture"></td>
