--- a/index.html
+++ b/index.html
@@ -1,98 +1,58 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-
-<head>
-  <meta charset="utf-8">
-  <title>My personal</title>
-</head>
-
-<body style="background-color: #b9fffc;">
-  <table cellspacing=20>
-    <tr>
-      <td> <img src="resources/gulshan.png" alt="Gulshan Profile picture"></td>
-      <td>
-        <h1><strong><a href="https://www.linkedin.com/in/bhartigulshan/">Gulshan Bharti</a></strong></h1>
-        <p><em>Research and development engineer</em></p>
-        <p>Research and development engineer at <a href="http://www.redmangoanalytics.com/">redmango analytics pvt.ltd</a>
-          which is a telecomm company establish in 2014 at mumbai. </p>
-      </td>
-    </tr>
-  </table>
-   <hr noshade>
-
-  <h3>Skills</h3>
-<table cellspacing="10">
-  <tr>
-    <td>
-      <table cellspacing="10">
-        <tr>
-          <td>python</td>
-          <td>⭐⭐⭐⭐⭐</td>
-        </tr>
-        <tr>
-          <td>Networking</td>
-          <td>⭐⭐⭐⭐⭐</td>
-        </tr>
-      </table>
-    </td>
-    <td>
-      <td>
-        <table cellspacing="10">
-          <tr>
-            <td>Html</td>
-            <td>⭐⭐⭐</td>
-          </tr>
-          <tr>
-            <td>CSS</td>
-            <td>⭐</td>
-          </tr>
-        </table>
-      </td>
-
-    </td>
-  </tr>
-</table>
-<hr noshading>
-  <h3>Education and knowledge</h3>
-  <ul>
-    <li>B.tech from Dev Bhoomi institute of technology dehradun</li>
-    <li>Intermediate from BSEB board</li>
-  </ul>
-  <table>
-    <thead>
-      <tr>
-        <td>Years</td>
-        <td>Profiles</td>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>2018-2019</td>
-        <td>Drive test engineer</td>
-      </tr>
-      <tr>
-        <td>2019-2020</td>
-        <td>R&D engineer</td>
-      </tr>
-    </tbody>
-    <tfoot>
-      <tr>
-        <td>thank</td>
-        <td>that's all</td>
-      </tr>
-    </tfoot>
-
-  </table>
-  <hr>
-  <h3>Hobbies</h3>
-  <ol>
-    <li><a href="https://www.computersciencedegreehub.com/faq/what-is-coding/">COADING</a></li>
-    <li><a href="https://en.wikipedia.org/wiki/Gaming">Playing game</a></li>
-    <li><a href="https://www.primevideo.com/">watching movies</a></li>
-  </ol>
-  <h3><a href="contact.html">Contact me</a></h3>
+  <head>
+    <meta charset="utf-8">
+    <title>Gulshan</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="favicon.ico">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Redressed&display=swap" rel="stylesheet">
+  </head>
+  <body>
+    <div class="top">
+      <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
+      <h1>I'm Gulshan</h1>
+      <h2 class="top-h2">A Traveler</h2>
+      <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
+      <img class="mountain" src="images/mountain.png" alt="mountain-img">
+    </div>
+    <div class="middle-container">
+      <div class="profile">
+        <img src="images/gulshan.png" alt="profile">
+        <h2>Hello.</h2>
+        <p class="bio">Hi my name is Gulshan Bharti and i am a Research and development Engineer at RedMango Analytics pvt. ltd.</p>
+      </div>
+      <hr>
+      <div class="skills">
+        <h2>My Skills.</h2>
+        <div class="skill-row">
+          <img class="skill-img" src="images/skill.gif" alt="skill">
+          <h3>Coading and Development</h3>
+          <p class="">Love to code on Python and have exprence on Computer Networking and now working on Html, CSS, JavaScript.</p>
+        </div>
+        <div class="skill-row">
+          <img class="chillie" src="images/chillies.png" alt="">
+          <h3>Design and development</h3>
+          <p class="">Developed a Network model of a multi-national company as a internship and also make a IOT Device for Home Automation.</p>
+        </div>
+      </div>
+      <hr>
+      <div class="contact-me">
+        <h2>Get In Touch</h2>
+        <h3>If you Love my Work and have Some Suggection</h3>
+        <p class="contact-message">If you Love my Work and have any suggection! Let's Talk about how is to be done.</p>
+        <a class="btn" href="mailto:gbharti379@gmail.com">CONTACT ME</a>
+      </div>
+    </div>
 
 
-</body>
+    <div class="bottom-container">
+      <a class="footer-link" href="https://www.linkedin.com/in/bhartigulshan/">LinkedIn</a>
+      <a class="footer-link" href="https://twitter.com/">Twitter</a>
+      <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+      <p class="copyright">© 2021 Gulshan Bharti.</p>
+    </div>
 
+  </body>
 </html>
