--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="top">
       <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
       <h1>I'm Gulshan</h1>
-      <h2 class="top-h2">A Traveler</h2>
+      <h2 class="top-h2">A Programmer</h2>
       <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
       <img class="mountain" src="images/mountain.png" alt="mountain-img">
     </div>
